--- a/headphone.html
+++ b/headphone.html
@@ -34,6 +34,6 @@
        </div> 
         <br/><br/>
           
-	   <button type="button" onclick="alert('Item Bought!')">BUY HERE!</button>
+	   <button type="button" onclick="alert('Item Bought!')">BUY HERE!!</button>
     </body>
 </html>
