--- a/headphone.html
+++ b/headphone.html
@@ -13,7 +13,7 @@
        <h2>Volkano X Asista Series Bluetooth Headphones</h2>
        <div class="gallery">
             <img src="images/headphones.png"/>
-            <img src="images/bluetooth-headphones2.png" width="400"/>
+            <img src="images/volkano.jpg" width="400"/>
            <h3>R599.00</h3>
            <p>3 Products available on stock</p>
         <h4>Product Specs</h4>
@@ -34,6 +34,6 @@
        </div> 
         <br/><br/>
           
-	   <button type="button" onclick="alert('Item Bought!')">BUY HERE!!</button>
+	   <button type="button" onclick="alert('Item Bought!')">BUY HERE!</button>
     </body>
 </html>
