--- a/laptop.html
+++ b/laptop.html
@@ -12,7 +12,7 @@
         <br/><br/>
         <h2>LENOVO THINKPAD E14</h2>
        <div class="gallery">
-            <img src="images/Laptop3.jpeg" width="600"/><img src="images/laptop1.JPEG" width="500"/>
+            <img src="images/Laptop3.jpeg" width="600"/><img src="images/pc.jpg" width="500"/>
            <h3>r699.99</h3>
             <h4>Item information</h4>
         <table border="1">
