--- a/printer.html
+++ b/printer.html
@@ -14,6 +14,21 @@
         <h2>Canon Printer (PIXMA MG2540S 3-in-1 Multi-function Printer)</h2>
        <div class="gallery">
            <img src="images/printer.jpg" width="400"/>
+           
+           <h3>R599.00</h3>
+           <ul>
+                <li><p>Print- scan- copy 3-in-1</p></li>
+                <li><p>Compact and affordable</p></li>
+                <li><p>USB Connectivity</p></li>
+                <li><p>Print speed of up to 8 ipm Mono</p></li>
+                <li><p>1 YEAR WARRANTY</p></li>
+           </ul>
+       </div>
+         <button type="button" onclick="alert('Canon Printer Bought!')">BUY HERE!</button>    
+		 
+		         <h2>HP (PIXMA MG2540S 3-in-1 Multi-function Printer)</h2>
+       <div class="gallery">
+            
            <img src="images/printer3.jpg" width="400"/>
            <h3>R599.00</h3>
            <ul>
@@ -24,6 +39,6 @@
                 <li><p>1 YEAR WARRANTY</p></li>
            </ul>
        </div>
-         <button type="button" onclick="alert('Item Bought!')">BUY HERE!</button>    
+         <button type="button" onclick="alert('HP (PIXMA MG2540S 3-in-1 Multi-function Printer) Bought!')">BUY HERE!</button>    
     </body>
 </html>
