--- a/laptop.html
+++ b/laptop.html
@@ -12,8 +12,8 @@
         <br/><br/>
         <h2>LENOVO THINKPAD E14</h2>
        <div class="gallery">
-            <img src="images/Laptop3.jpeg" width="600"/><img src="images/pc.jpg" width="450"/>
-           <h3>r699.99</h3>
+            <img src="images/Laptop3.jpeg" width="600"/>
+           <h3>R8999.99</h3>
             <h4>Item information</h4>
         <table border="1">
            <tr>
@@ -67,8 +67,48 @@
                <li><p>KYB US English w/Num Pad</p></li>  
            </ul>
        </div> 
+	   <button type="button" onclick="alert('LENOVO THINKPAD E14 Bought!')">BUY HERE!</button></l>
+	   
+	         <h3></h3>
+			 	    <img src="images/laptop1.JPEG" width="500"/><h4>HP I7 CORE 5TH GEN</h4>
+			  <h3>R1500.99</h3>
+            <h4>Item information</h4>
+        <table border="1">
+           <tr>
+               <td><b>Condition:</b></td>
+               <td>New</td>
+           </tr>
+           <tr>
+           <td><b>Location:</b></td>
+               <td>South Africa</td>
+           </tr>
+           <tr>
+               <td><b>Product code:</b></td>
+               <td>20RA0010ZA</td>
+           </tr>
+           <tr>
+               <td><b>bidorbuy ID:</b></td>
+               <td>523407087</td>
+           </tr>
+           <tr>
+               <td><b>Product code:</b></td>
+               <td>20RA0010ZA</td>
+           </tr>
+           <tr>
+               <td><b>Product code:</b></td>
+               <td>20RA0010ZA</td>
+           </tr>
+            <tr>
+                <td><b>Colour</b></td>
+                <td>Black</td>
+            </tr>
+            <tr>
+                <td><b>warraty</b></td>
+                <td>1 year carry-in warraty</td>
+            </tr>
+        </table>
          
-		<button type="button" onclick="alert('Item Bought!')">BUY HERE!</button>
+		<button type="button" onclick="alert('HP I7 CORE 5TH GEN Bought!')">BUY HERE!</button>
 
     </body>
 </html>
